Align albums and videos correctly without unnecessary spaces

--- a/webui/css/views/ArtistsView.css
+++ b/webui/css/views/ArtistsView.css
@@ -31,6 +31,9 @@
 {
     flex-basis:         100%;
     margin-left:        0.8em;
+    margin-right:      -0.8em;
+    width:              0;      /* To align to album entries */
+    overflow:           hidden;
 }
 .artistentry > div
 {
